updated spool/openhook with early fork tactic.
Also added licenses missing from newish ovis_util files.

bug found by llnl with symptom of multiple copies of tail written to
closed data file before it is spooled. Solution here is to complete close and
fsync for all rolled files before spooling and fork a slave just for
shelling before any threading/libevent starts. This also reduces the time
lock is held blocking data storage threads. fsync is done outside the lock.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -364,6 +364,7 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms_ban.sh
 		 scripts/ldms_usertest.sh
 		 scripts/ldms_local_usertest.sh
+		 scripts/ldms_local_temperatures.sh
 		 scripts/ldms_local_slurmtest.sh
 		 scripts/ldms_local_valgrind.sh
 		 scripts/ldms_local_clocktest.sh
@@ -375,6 +376,7 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms_local_rollperiod_test.sh
 		 scripts/ldms_local_rollrecords_test.sh
 		 scripts/ldms_local_rolltime_test.sh
+		 scripts/ldms_local_spooltail.sh
 		 scripts/ldms_local_dertest.sh
 		 scripts/ldms_local_dertest_big.sh
 		 scripts/ldms_local_procstatutil.sh
