--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -37,5 +37,7 @@ bin_SCRIPTS += ldms_local_syslog.sh
 bin_SCRIPTS += ldms_local_synthetic_test.sh
 bin_SCRIPTS += ldms_local_rollspool_test.sh
 bin_SCRIPTS += ldms_local_rollderspool.sh
+bin_SCRIPTS += ldms_local_spooltail.sh
 
 bin_SCRIPTS += ldms_local_csvietf.sh
+bin_SCRIPTS += ldms_local_temperatures.sh
