repair to vpath build and omit unsupported samplers.

--- a/configure.ac
+++ b/configure.ac
@@ -29,7 +29,7 @@ OPTION_DEFAULT_ENABLE([libevent], [ENABLE_LIBEVENT])
 OPTION_DEFAULT_DISABLE([gpcdlocal], [ENABLE_GPCDLOCAL], [  cray only])
 if test "$enable_gpcdlocal" = "yes"; then
 	AC_CONFIG_SUBDIRS([gpcd-support])
-	if ! test -d gpcd-support/gpcd; then
+	if ! test -d $srcdir/gpcd-support/gpcd; then
 		AC_MSG_ERROR([You need the gpcd-support submodule to enable it.])
 	fi
 fi
@@ -37,7 +37,7 @@ fi
 OPTION_DEFAULT_DISABLE([sos], [ENABLE_SOS], [  requires lib])
 if test "$enable_sos" = "yes"; then
 	AC_CONFIG_SUBDIRS([sos])
-	if ! test -d sos/sos; then
+	if ! test -d $srcdir/sos/sos; then
 		AC_MSG_ERROR([You need the sos submodule to enable it.])
 	fi
 fi
