Baler MasterSlave example and consistency in naming convention in examples

--- a/baler/examples/MasterSlave/baler.master.cfg
+++ b/baler/examples/MasterSlave/baler.master.cfg
@@ -1,12 +1,9 @@
 tokens type=ENG path=<path_to_examples>/CrayXC40/eng-dictionary_edit
 tokens type=ENG path=<path_to_examples>/CrayXC40/my-dict
-tokens type=HOST path=<path_to_examples>/CrayXC40/hosts.txt
+tokens type=HOST path=<path_to_examples>/CrayXC40/mutrinohosts.txt
 #store_name=img_3600
 plugin name=bout_sos_img delta_ts=3600
 #store_name=img_3600
 plugin name=bout_sos_img delta_ts=60
 plugin name=bout_sos_msg
-# This assumes log data is being fed to port 54001 by some means. For example,
-# in syslog is a rule like: if <some_matching_case_here> then @@127.0.0.1:54001
-plugin name=bin_rsyslog_tcp port=54001
-
+plugin name=bin_rsyslog_tcp port=74001
