--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -34,7 +34,6 @@ OPTION_DOC
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 
 OPTION_DEFAULT_ENABLE([core], [ENABLE_CORE])
-OPTION_DEFAULT_ENABLE([papi], [ENABLE_PAPI])
 OPTION_DEFAULT_ENABLE([mmap], [ENABLE_MMAP])
 OPTION_DEFAULT_ENABLE([perf], [ENABLE_PERF])
 OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
@@ -71,6 +70,9 @@ OPTION_DEFAULT_ENABLE([meminfo], [ENABLE_MEMINFO])
 OPTION_DEFAULT_DISABLE([msr_interlagos], [ENABLE_MSR_INTERLAGOS])
 OPTION_DEFAULT_ENABLE([array_example], [ENABLE_ARRAY_EXAMPLE])
 OPTION_DEFAULT_DISABLE([perfevent], [ENABLE_PERFEVENT])
+OPTION_DEFAULT_DISABLE([rapl], [ENABLE_RAPL])
+OPTION_DEFAULT_DISABLE([papi], [ENABLE_PAPI])
+OPTION_WITH([libpapi], [LIBPAPI])
 OPTION_DEFAULT_ENABLE([procinterrupts], [ENABLE_PROCINTERRUPTS])
 OPTION_DEFAULT_ENABLE([procnetdev], [ENABLE_PROCNETDEV])
 OPTION_DEFAULT_ENABLE([procnfs], [ENABLE_PROCNFS])
