updated sysclassib to capture all ports listed w/0s if need be.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -383,6 +383,7 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms_local_rollspool_test.sh
 		 scripts/ldms_local_rollderspool.sh
 		 scripts/ldms_local_csvietf.sh
+		 scripts/ldms_local_scibtest.sh
 )
 
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
