--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -39,3 +39,4 @@ bin_SCRIPTS += ldms_local_rollspool_test.sh
 bin_SCRIPTS += ldms_local_rollderspool.sh
 
 bin_SCRIPTS += ldms_local_csvietf.sh
+bin_SCRIPTS += ldms_local_scibtest.sh
