merges for 246 release and rpm build updates.

--- a/lib/src/ovis_util/Makefile.am
+++ b/lib/src/ovis_util/Makefile.am
@@ -10,7 +10,7 @@ libovis_util_conf = /etc/ld.so.conf.d/libovis_util.conf
 libovis_util_la_LIBADD = -lrt
 lib_LTLIBRARIES += libovis_util.la
 
-check_PROGRAMS = test_big_dstring test_dstring test_olog test_sheller test_rman
+check_PROGRAMS = test_big_dstring test_dstring test_rman
 
 test_rman_SOURCES= test_rman.c 
 test_rman_LDFLAGS = -lovis_util -lrt
@@ -21,10 +21,4 @@ test_dstring_DEPENDENCIES = libovis_util.la
 test_big_dstring_SOURCES=test_big_dstring.c big_dstring.h 
 test_big_dstring_LDFLAGS = -lovis_util -lrt
 test_big_dstring_DEPENDENCIES = libovis_util.la
-test_olog_SOURCES= test_olog.c 
-test_olog_LDFLAGS = -lovis_util @LDFLAGS_GETTIME@
-test_olog_DEPENDENCIES = libovis_util.la
-test_sheller_SOURCES= test_sheller.c 
-test_sheller_LDFLAGS = -lovis_util @LDFLAGS_GETTIME@
-test_sheller_DEPENDENCIES = libovis_util.la
 endif
