--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -17,8 +17,9 @@ bin_SCRIPTS= envldms.sh \
 bin_SCRIPTS+= ldms_ban.sh
 
 bin_SCRIPTS+=  ldms_ctltest.sh
-bin_SCRIPTS+=  ldms_local_slurmtest.sh
 bin_SCRIPTS+=  ldms_local_csvorder.sh
+bin_SCRIPTS+=  ldms_local_jobidmost.sh
+bin_SCRIPTS+=  ldms_local_jobidtest.sh
 
 bin_SCRIPTS+= \
 ldms_local_rollbytes_test.sh \
