missed the man page.

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -26,6 +26,7 @@ pending_dist_man7_MANS= \
 Plugin_lustre2_client.man \
 Plugin_procsensors.man \
 Plugin_procstat.man \
+Plugin_jobid.man \
 Plugin_sysclassib.man
 
 dist_man7_MANS += Plugin_store_rabbitv3.man
