--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -16,7 +16,7 @@ ldms_ls_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@
 ldms_ls_LDADD = $(CORE)/libldms.la
 ldms_ls_LDFLAGS = $(AM_LDFLAGS) \
 	@LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
-	-lzap -lmmalloc -lovis_util -lcoll -lovis_third \
+	-lzap -lmmalloc -lovis_util -lcoll \
 	-levent -levent_pthreads -lpthread \
 	@LDFLAGS_GETTIME@
 
@@ -26,7 +26,7 @@ ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@
 ldmsd_LDADD = $(CORE)/libldms.la
 ldmsd_LDFLAGS = $(AM_LDFLAGS) \
 	@LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
-	-lzap -lmmalloc -lovis_util -lcoll -lovis_third \
+	-lzap -lmmalloc -lovis_util -lcoll \
 	-levent -levent_pthreads -lpthread
 
 if ENABLE_OCM
@@ -35,7 +35,7 @@ ldmsd_LDFLAGS += @OCM_LIBDIR_FLAG@ -locm
 ldmsd_CFLAGS += @OCM_INCDIR_FLAG@
 endif
 
-ldmsd_LDFLAGS += -lovis_util -lcoll -lovis_third -ldl -lovis_ctrl
+ldmsd_LDFLAGS += -lovis_util -lcoll -ldl -lovis_ctrl
 
 if ENABLE_RABBITV3
 ldmsd_LDFLAGS += -lrabbitmq
@@ -47,7 +47,7 @@ ldms_ls_LDADD += @OVIS_AUTH_LIBS@
 
 ldmsctl_SOURCES = ldmsctl.c
 ldmsctl_LDADD = $(CORE)/libldms.la @OVIS_AUTH_LIBS@
-ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ -lovis_ctrl -lovis_util -lmmalloc -lcoll -lovis_third -lzap  @LDFLAGS_GETTIME@
+ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ -lovis_ctrl -lovis_util -lmmalloc -lcoll -lzap  @LDFLAGS_GETTIME@
 
 if ENABLE_LDMSD_RCTL
 ldmsd_SOURCES += ldmsd_config_rctrl.c
