--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -10,7 +10,7 @@ ldmscoreincludedir = $(includedir)/ldms
 ldmscoreinclude_HEADERS = ldms.h ldms_core.h ldmsd.h ldms_xprt.h
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h
-libldms_la_LIBADD = -ldl -lpthread -lcoll -lovis_third \
+libldms_la_LIBADD = -ldl -lpthread -lcoll \
 	@OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
 	-lmmalloc -lzap @OVIS_AUTH_LIBS@
 
